hphp/hack/test/typecheck/refinements/refine_non_existent.php.exp
File "refine_non_existent.php", line 6, characters 13-13:
Unbound name: `C` (Naming[2049])
